===v7.2.3===
 * The old Runes condition has been deprecated. In its place are 3 new conditions that should be much easier to use.
 * The Spell Cast Count condition has been deprecated. Its functionality can be replicated using the counter notification handler on a Combat Event icon.
 * Updated the Chi condition to support a max of 6.

====Bug Fixes====
* Fixed an issue that caused Unit Conditions to not work with special units (group, maintank, mainassist, and player names).
* Mark of Shadowmoon and Mark of Blackrock should now work with the Internal Cooldown icon type.
* Fixed an error with power bar spell cost detection for German clients.
* Removed the Monochrome font outline option because it causes crashes so often.
* Resource Display icons should now correctly display partial resources.

===v7.2.2===
 * You can now easily clone an event handler by right-clicking it in the Notifications tab.
 * There is a new special unitID in TellMeWhen, "group" that will check raid or party depending on which you are in. It prevents the overlap that happens when checking "player; party; raid".
 * You can now adjust the opacity of the backdrop for bar icons.

====Bug Fixes====
 * Rage (and perhaps other powers) should no longer be multipled by 10 in the Resource Display icon type.
 * Warriors in Gladiator Stance will now be treated as DPS for groups' role settings, and for the Specialization Role condition.
 * The "Force top-row runes..." condition setting checkbox should now always reflect the icon's settings.
 * The Zone PvP Type condition now actually works.
 * Excluding spells from equivalencies now works if the spell is an ID in the equivalency.
 * Added event registrations to two more spellcast events in hopes of fixing an issue where Spell Cast icons sometimes don't disappear (also added these to the spell cast condition).
 * Fixed a silly logic error that broke skinning of texts shown through meta icons.

===v7.2.1===
====Bug Fixes====